# metalclaw

./: .gitignore  README.md  pyproject.toml
container/: Containerfile  agent-wrapper.sh  install-ca-cert.sh  install-system-deps.sh  mattermost-bot.py  metaclaw-start.sh  metalclaw-start.sh
policies/: default.yaml
policies/presets/: anthropic.yaml  github.yaml  npm.yaml  pypi.yaml
src/metaclaw/: __init__.py  __main__.py  agent.py  cli.py  config.py  container.py  gpu.py  inference.py  machine.py  models.py  policy.py  preflight.py
src/metalclaw/: __init__.py  __main__.py  agent.py  cli.py  config.py  container.py  inference.py  machine.py  metal.py  models.py  policy.py  preflight.py
src/metalclaw/policies/: default.yaml
src/metalclaw/policies/presets/: anthropic.yaml  discord.yaml  docker.yaml  github.yaml  huggingface.yaml  jira.yaml  mattermost.yaml  npm.yaml  openclaw.yaml  outlook.yaml  pypi.yaml  slack.yaml  telegram.yaml
tests/: test_config.py  test_container.py  test_mattermost.py  test_metal.py  test_models.py  test_policy.py  test_preflight.py
